<resources>
    <string name="app_name">Rent</string>
    <string name="want_to_become_seller">Want to become seller?</string>
    <string name="already_have_an_account_login">already_have_an_account_login</string>
    <string name="join_now">join_now</string>
    <string name="a_place_to_buy_anything">a_place_to_buy_anything</string>
    <string name="login">Login</string>
    <string name="joinnow">Join Now</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="i_m_an_admin">I m an Admin</string>
    <string name="i_am_not_an_admin">I am not an Admin</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>

    <string name="product_price">Product Price</string>
    <string name="add_productm">Add Product</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="title_activity_home">homeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout1">Logout</string>
    <string name="logout2">Logout</string>
    <string name="settings2">Settings</string>
    <string name="categories2">Categories</string>
    <string name="orders2">Orders</string>
    <string name="cart2">Cart</string>
    <string name="username">UserName</string>
    <string name="product_price_m">Product Price</string>
    <string name="product_description_m">Product Description</string>
    <string name="product_name_m">Product Name</string>
    <string name="your_city">Your City</string>
    <string name="your_address">Your Address</string>
    <string name="your_phone_no">Your Phone No</string>
    <string name="your_name">Your Name</string>
    <string name="please_enter_your_shipment_details">Please Enter Your Shipment Details</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_seller_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="what_s_on_your_mind">Enter your query</string>


    <string-array name="category_type">
        <item>Books</item>
        <item>Computer and Peripherals</item>
        <item>Home and Kitchen</item>
        <item>Office Supplies</item>
        <item>Sports and Outdoors</item>
        <item>Furniture</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_seller_reset_password">SellerResetPassword</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="forgot_passwords"><u>Forgot Password?</u></string>
    <string name="i_am_an_admin"><u>I am an Admin</u></string>
</resources>