<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryBoy.DelliveredItemActivity">



    <ImageView
        android:id="@+id/productimage"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productimage"
        android:inputType="textMultiLine"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:hint="@string/product_name"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>

    <EditText
        android:id="@+id/productdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productname"
        android:inputType="textMultiLine"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:hint="@string/product_description"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>


    <Button
        android:id="@+id/btnproduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productdescription"
        android:text="@string/add_productm"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="17dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/buttons"

        />


</RelativeLayout>