<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Seller.SellerAddNewProductActivity">


    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/select_product_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_product_image"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:hint="@string/product_name"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>
    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="6dp"
        android:padding="20dp"
        android:hint="@string/product_description"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>
    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:inputType="number"
        android:layout_marginTop="6dp"
        android:padding="20dp"
        android:hint="@string/product_price"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"/>


    <TextView
        android:id="@+id/tv_weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_below="@id/product_price"
        android:background="@drawable/input_design"
        android:textStyle="bold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tv_monthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_below="@id/tv_weekly"
        android:background="@drawable/input_design"
        android:textStyle="bold"
        android:textSize="18sp"
        />




    <Button
        android:id="@+id/add_new_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_monthly"
        android:text="@string/add_productm"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:padding="17dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/buttons"

        />

</RelativeLayout>