<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".loginActivity">


    <EditText
        android:id="@+id/login_phone_number"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="Phone No."
        android:drawableRight="@drawable/phonecall"
        android:inputType="number"
        android:textFontWeight="1"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" /> 

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_phone_number"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:hint="Password"
        android:textFontWeight="1"
        android:inputType="textPassword"
        android:padding="20dp"
        android:drawableRight="@drawable/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_chk"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:text="Remember Me"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cbd_strokeColor="@color/black" />


        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/forgot_passwords"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:text="@string/i_am_an_admin"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/not_admin_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="23dp"
        android:text="I am not an Admin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="315dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        app:srcCompat="@drawable/login_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="100dp"
        android:text="A Place To Rent Anything"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="@color/black"/>




</RelativeLayout>